tdf#108949 writerfilter: avoid RTF export bug

RTF incorrectly exports the character properties of a footnote, as
is vividly seen in the unit test. Since this will have affected a LOT
of old documents, explicitly exclude that dangerous situation.

Change-Id: Ia6e0c5b2ea29d6183a6a4aedbc0b19b7171f8334