writerfilter/source/dmapper/DomainMapper_Impl.cxx
@@ -1721,7 +1721,9 @@ void DomainMapper_Impl::PushFootOrEndnote( bool bIsFootnote )
             uno::UNO_QUERY_THROW );
         uno::Reference< text::XFootnote > xFootnote( xFootnoteText, uno::UNO_QUERY_THROW );
         pTopContext->SetFootnote( xFootnote );
-        uno::Sequence< beans::PropertyValue > aFontProperties = pTopContext->GetPropertyValues();
+        uno::Sequence< beans::PropertyValue > aFontProperties;
+        if( !(IsRTFImport() && pTopContext == GetTopContextOfType(CONTEXT_PARAGRAPH)) )
+            aFontProperties = pTopContext->GetPropertyValues();
         appendTextContent( uno::Reference< text::XTextContent >( xFootnoteText, uno::UNO_QUERY_THROW ), aFontProperties );
         m_aTextAppendStack.push(TextAppendContext(uno::Reference< text::XTextAppend >( xFootnoteText, uno::UNO_QUERY_THROW ),
                     xFootnoteText->createTextCursorByRange(xFootnoteText->getStart())));
